@@ -489,42 +489,42 @@
 	<!-- Armors -->
 		<!-- Magic Plate Armor -->
 	<movevent event="Equip" itemid="2472" slot="armor" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="2472" slot="armor" function="onDeEquipItem"/>
 		<!-- Crown Armor -->
 	<movevent event="Equip" itemid="2487" slot="armor" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="2487" slot="armor" function="onDeEquipItem"/>
 		<!-- Dragon Scale Mail -->
 	<movevent event="Equip" itemid="2492" slot="armor" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="2492" slot="armor" function="onDeEquipItem"/>
 		<!-- Golden Armor -->
 	<movevent event="Equip" itemid="2466" slot="armor" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="2466" slot="armor" function="onDeEquipItem"/>
 		<!-- Knight Armor -->
 	<movevent event="Equip" itemid="2476" slot="armor" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="2476" slot="armor" function="onDeEquipItem"/>
 		<!-- Amazon Armor -->
@@ -544,42 +544,42 @@
 	<movevent event="DeEquip" itemid="2660" slot="armor" function="onDeEquipItem"/>
 		<!-- Terra Mantle -->
 	<movevent event="Equip" itemid="7884" slot="armor" level="50" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="7884" slot="armor" function="onDeEquipItem"/>
 		<!-- Glacier Robe -->
 	<movevent event="Equip" itemid="7897" slot="armor" level="50" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="7897" slot="armor" function="onDeEquipItem"/>
 		<!-- Lightning Robe -->
 	<movevent event="Equip" itemid="7898" slot="armor" level="50" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="7898" slot="armor" function="onDeEquipItem"/>
 		<!-- Magma Coat -->
 	<movevent event="Equip" itemid="7899" slot="armor" level="50" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="7899" slot="armor" function="onDeEquipItem"/>
 		<!-- Magician's Robe -->
 	<movevent event="Equip" itemid="8819" slot="armor" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8819" slot="armor" function="onDeEquipItem"/>
 		<!-- Witchhunter's Cloak -->
@@ -592,14 +592,14 @@
 		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8865" slot="armor" function="onDeEquipItem"/>
-		<!-- Serpent Coat -->
-	<movevent event="Equip" itemid="8866" slot="armor" function="onEquipItem">
+		<!-- Robe of the Ice Queen -->
+	<movevent event="Equip" itemid="8866" level="75" slot="armor" function="onEquipItem">
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8866" slot="armor" function="onDeEquipItem"/>
 		<!-- Dragon Robe -->
-	<movevent event="Equip" itemid="8867" slot="armor" function="onEquipItem">
+	<movevent event="Equip" itemid="8867" level="75" slot="armor" function="onEquipItem">
 		<vocation name="Sorcerer"/>
 		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
@@ -618,18 +618,18 @@
 	<movevent event="DeEquip" itemid="8869" slot="armor" function="onDeEquipItem"/>
 		<!-- Spirit Cloak -->
 	<movevent event="Equip" itemid="8870" slot="armor" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8870" slot="armor" function="onDeEquipItem"/>
 		<!-- Focus Cape -->
 	<movevent event="Equip" itemid="8871" slot="armor" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8871" slot="armor" function="onDeEquipItem"/>
 		<!-- Belted Cape -->
@@ -640,50 +640,50 @@
 	<movevent event="DeEquip" itemid="8872" slot="armor" function="onDeEquipItem"/>
 		<!-- Lavos Armor -->
 	<movevent event="Equip" itemid="8877" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8877" slot="armor" function="onDeEquipItem"/>
 		<!-- Crystalline Armor -->
 	<movevent event="Equip" itemid="8878" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8878" slot="armor" function="onDeEquipItem"/>
 		<!-- Voltage Armor -->
 	<movevent event="Equip" itemid="8879" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8879" slot="armor" function="onDeEquipItem"/>
 		<!-- Swamplair Armor -->
 	<movevent event="Equip" itemid="8880" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8880" slot="armor" function="onDeEquipItem"/>
 		<!-- Fireborn Giant Armor -->
-	<movevent event="Equip" itemid="8881" slot="armor" level="90" function="onEquipItem">
+	<movevent event="Equip" itemid="8881" slot="armor" level="100" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8881" slot="armor" function="onDeEquipItem"/>
 		<!-- Earthborn Titan Armor -->
-	<movevent event="Equip" itemid="8882" slot="armor" level="90" function="onEquipItem">
+	<movevent event="Equip" itemid="8882" slot="armor" level="100" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8882" slot="armor" function="onDeEquipItem"/>
 		<!-- Windborn Colossus Armor -->
-	<movevent event="Equip" itemid="8883" slot="armor" level="90" function="onEquipItem">
+	<movevent event="Equip" itemid="8883" slot="armor" level="100" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
@@ -719,7 +719,7 @@
 	</movevent>
 	<movevent event="DeEquip" itemid="8888" slot="armor" function="onDeEquipItem"/>
 		<!-- Skullcracker Armor -->
-	<movevent event="Equip" itemid="8889" slot="armor" level="100" function="onEquipItem">
+	<movevent event="Equip" itemid="8889" slot="armor" level="95" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
@@ -738,10 +738,10 @@
 	<movevent event="DeEquip" itemid="8891" slot="armor" function="onDeEquipItem"/>
 		<!-- Ethno Coat -->
 	<movevent event="Equip" itemid="8892" slot="armor" function="onEquipItem">
+		<vocation name="Paladin"/>
+		<vocation name="Royal Paladin" showInDescription="0"/>
 		<vocation name="Sorcerer"/>
 		<vocation name="Master Sorcerer" showInDescription="0"/>
-		<vocation name="Druid"/>
-		<vocation name="Elder Druid" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="8892" slot="armor" function="onDeEquipItem"/>
 		<!-- Yalahari Armor -->
@@ -750,58 +750,67 @@
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="9776" slot="armor" function="onDeEquipItem"/>
-
 		<!-- Zaoan Armor -->
 	<movevent event="Equip" itemid="11301" slot="armor" level="50" function="onEquipItem">
-		<vocation name="Knight"/>
-		<vocation name="Elite Knight" showInDescription="0"/>
 		<vocation name="Paladin"/>
 		<vocation name="Royal Paladin" showInDescription="0"/>
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="11301" slot="armor" function="onDeEquipItem"/>
 		<!-- Spellweaver's Robe -->
 	<movevent event="Equip" itemid="11355" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="11355" slot="armor" function="onDeEquipItem"/>
 		<!-- Zaoan Robe -->
 	<movevent event="Equip" itemid="11356" slot="armor" level="60" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="11356" slot="armor" function="onDeEquipItem"/>
 		<!-- Royal Scale Robe -->
 	<movevent event="Equip" itemid="12643" slot="armor" level="100" function="onEquipItem">
-		<vocation name="Sorcerer"/>
-		<vocation name="Master Sorcerer" showInDescription="0"/>
 		<vocation name="Druid"/>
 		<vocation name="Elder Druid" showInDescription="0"/>
+		<vocation name="Sorcerer"/>
+		<vocation name="Master Sorcerer" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="12643" slot="armor" function="onDeEquipItem"/>
-
 		<!-- Royal Draken Mail -->
 	<movevent event="Equip" itemid="12642" slot="armor" level="100" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
-	<movevent event="DeEquip" itemid="12642" slot="armor" function="onDeEquipItem"/>
+		<!-- Elite Draken Mail -->
+	<movevent event="Equip" itemid="12607" slot="armor" level="100" function="onEquipItem">
+		<vocation name="Knight"/>
+		<vocation name="Elite Knight" showInDescription="0"/>
+	</movevent>
+	<movevent event="DeEquip" itemid="12607" slot="armor" function="onDeEquipItem"/>
 		<!-- Ornate Chestplate -->
 	<movevent event="Equip" itemid="15406" slot="armor" level="200" function="onEquipItem">
 		<vocation name="Knight"/>
 		<vocation name="Elite Knight" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="15406" slot="armor" function="onDeEquipItem"/>
+		<!-- Depth Lorica   -->
+	<movevent event="Equip" itemid="15407" level="150" slot="armor" function="onEquipItem">
+		<vocation name="Paladin"/>
+		<vocation name="Royal Paladin" showInDescription="0"/>
+	</movevent>
+	<movevent event="DeEquip" itemid="15407" slot="armor" function="onDeEquipItem"/>
 		<!-- Calopteryx Cape -->
 	<movevent event="Equip" itemid="15489" slot="armor" level="80" function="onEquipItem">
+		<vocation name="Paladin"/>
+		<vocation name="Royal Paladin" showInDescription="0"/>
 		<vocation name="Sorcerer"/>
 		<vocation name="Master Sorcerer" showInDescription="0"/>
-		<vocation name="Druid"/>
-		<vocation name="Elder Druid" showInDescription="0"/>
 	</movevent>
 	<movevent event="DeEquip" itemid="15489" slot="armor" function="onDeEquipItem"/>
 
