@@ -37,6 +37,7 @@
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Magic level skill boost will now show up in market details.
 	Element damage and type will now show up in market details (also corrected the message in item description).
+	Corrected a lot of items attributes.
 	Replaced the old reverseFluidMap which wasn't working as intended with a new server-to-client map.
 	Rewrote how shopItems table worked in NPC ShopModule to work with items of same id but subtype that differs (i.e. different liquids in same fluid container).
 	Updated items.
